# app/models/address.rb
@@ -1,0 +1,5 @@
+class Address < ApplicationRecord
+  belongs_to :user
+
+  validates :zip_code, :city, :state, presence: true
+end
